# exoplanet-api

./: LICENSE  README.md  pyproject.toml
app/: detector.py  main.py  models.py
notebooks/: 01_explore_lightkurve.ipynb  02_other_stars.ipynb
